add app pause flow. update swagger, tests.
